--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "module": "CommonJS",
-        "outDir": "./output"
+        "outDir": "./dist"
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
